package com.airtribe.meditrack.service.notification;

/** Event types emitted by {@code AppointmentService}. */
public enum AppointmentEventType {
  CREATED,
  CONFIRMED,
  CANCELLED,
  COMPLETED,
  RESCHEDULED
}
